[gd_scene load_steps=30 format=3 uid="uid://bb54q17erdbsf"]

[ext_resource type="Script" path="res://ship/ship_manager.gd" id="1_oe2xb"]
[ext_resource type="Script" path="res://ship/components/ship_component.gd" id="2_3xy1i"]
[ext_resource type="PackedScene" uid="uid://cvs55tafiwxnj" path="res://auxcraft/scenes/fighter_movement_clone.tscn" id="2_tvu4p"]
[ext_resource type="PackedScene" uid="uid://cjnmu2tlklrfb" path="res://ship/fighter_model.tscn" id="3_arndu"]
[ext_resource type="Script" path="res://ship/components/ship_component_manager.gd" id="3_n54t7"]
[ext_resource type="PackedScene" uid="uid://hbyqte87esm2" path="res://ship_weapons/autocannon/autocannon_size_1.tscn" id="4_00x40"]
[ext_resource type="Script" path="res://system/scripts/controllable_object.gd" id="5_1n6oi"]
[ext_resource type="Script" path="res://ship/systems/power/ship_cooling_manager.gd" id="5_3adyx"]
[ext_resource type="Script" path="res://system/scripts/interactable.gd" id="6_fb5fw"]
[ext_resource type="Script" path="res://ship/ship_movement_manager.gd" id="7_0mde5"]
[ext_resource type="Script" path="res://ship_weapons/scripts/mounted_weapons_controller.gd" id="8_onrm8"]
[ext_resource type="PackedScene" uid="uid://cf6omujhtc7g7" path="res://ship/systems/radar/radar_signature.tscn" id="10_ddwes"]
[ext_resource type="PackedScene" uid="uid://clbihxv8snp87" path="res://ship/systems/radar/radar_map.tscn" id="11_qanif"]
[ext_resource type="Script" path="res://ship/systems/radar/radar_manager.gd" id="12_ji0mw"]
[ext_resource type="Script" path="res://ship/radar_targeter.gd" id="13_h86uo"]
[ext_resource type="Script" path="res://ship/systems/power/ship_power_manager.gd" id="15_82wde"]
[ext_resource type="Script" path="res://ship/systems/power/power_system.gd" id="16_crtc6"]
[ext_resource type="PackedScene" uid="uid://ckooiwe35tmch" path="res://ship/components/ship_reactor_component.tscn" id="19_4nti4"]
[ext_resource type="PackedScene" uid="uid://dg0ius8wdpt8s" path="res://ship/components/capacitor.tscn" id="19_bsn7f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fbly5"]
size = Vector3(1, 1.89404, 0.78833)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tds0y"]
properties/0/path = NodePath("MovementManager:velocity_sync")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("MovementManager:rotation_input")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("MovementManager:virtual_joystick_value")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="Resource" id="Resource_kl4ev"]
script = ExtResource("16_crtc6")
system_name = "Thrusters"
max_capacitors = 4
min_capacitors_for_power = 1

[sub_resource type="Resource" id="Resource_t7g4u"]
script = ExtResource("16_crtc6")
system_name = "Weapons"
max_capacitors = 6
min_capacitors_for_power = 1

[sub_resource type="Resource" id="Resource_2t2p7"]
script = ExtResource("16_crtc6")
system_name = "Shields"
max_capacitors = 4
min_capacitors_for_power = 1

[sub_resource type="Resource" id="Resource_3x8m8"]
script = ExtResource("16_crtc6")
system_name = "Radar"
max_capacitors = 3
min_capacitors_for_power = 1

[sub_resource type="Resource" id="Resource_wd2yx"]
script = ExtResource("16_crtc6")
system_name = "Life Support"
max_capacitors = 3
min_capacitors_for_power = 1

[sub_resource type="Resource" id="Resource_dirrh"]
script = ExtResource("16_crtc6")
system_name = "Hydroponics"
max_capacitors = 1
min_capacitors_for_power = 1

[sub_resource type="Resource" id="Resource_fkvsh"]
script = ExtResource("16_crtc6")
system_name = "Salvage"
max_capacitors = 1
min_capacitors_for_power = 1

[sub_resource type="Resource" id="Resource_ssukg"]
script = ExtResource("16_crtc6")
system_name = "Medical"
max_capacitors = 1
min_capacitors_for_power = 1

[node name="Fighter" type="Node3D" node_paths=PackedStringArray("movement_manager", "main_target_component", "component_manager", "radar_manager", "power_manager", "cooling_manager") groups=["ship"]]
script = ExtResource("1_oe2xb")
movement_manager = NodePath("MovementManager")
main_target_component = NodePath("")
movement_clone_prefab = ExtResource("2_tvu4p")
component_manager = NodePath("ShipComponentManager")
radar_manager = NodePath("RadarManager")
power_manager = NodePath("PowerManager")
cooling_manager = NodePath("ShipCoolingManager")

[node name="ShipComponentManager" type="Node3D" parent="." node_paths=PackedStringArray("ship_manager")]
script = ExtResource("3_n54t7")
ship_manager = NodePath("..")

[node name="ShipWeaponsController" type="Node3D" parent="." node_paths=PackedStringArray("weapons", "controllable", "ship")]
script = ExtResource("8_onrm8")
weapons = [NodePath("../fighter/autocannon_size1"), NodePath("../fighter/autocannon_size2")]
controllable = NodePath("../Cockpit/Controllable")
ship = NodePath("..")

[node name="ShipCoolingManager" type="Node" parent="." node_paths=PackedStringArray("ship")]
script = ExtResource("5_3adyx")
ship = NodePath("..")

[node name="MainTargetComponent" type="CharacterBody3D" parent="." node_paths=PackedStringArray("ship")]
script = ExtResource("2_3xy1i")
ship = NodePath("..")

[node name="fighter" parent="." instance=ExtResource("3_arndu")]

[node name="autocannon_size1" parent="fighter" node_paths=PackedStringArray("weapons_controller", "ship") instance=ExtResource("4_00x40")]
transform = Transform3D(1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 2.7715, -0.752023, -1)
weapons_controller = NodePath("../../ShipWeaponsController")
ship = NodePath("../..")

[node name="autocannon_size2" parent="fighter" node_paths=PackedStringArray("weapons_controller", "ship") instance=ExtResource("4_00x40")]
transform = Transform3D(-5.73206e-15, -1, 1.31134e-07, -4.37114e-08, 1.31134e-07, 1, -1, 0, -4.37114e-08, -2.771, -0.752, -1)
weapons_controller = NodePath("../../ShipWeaponsController")
ship = NodePath("../..")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
far = 10000.0

[node name="Cockpit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 2)

[node name="Controllable" type="RemoteTransform3D" parent="Cockpit" node_paths=PackedStringArray("camera", "interactable", "synchronizer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
script = ExtResource("5_1n6oi")
camera = NodePath("../../CameraPivot/Camera3D")
interactable = NodePath("../Interactable")
synchronizer = NodePath("../../VelocitySynchroniser")

[node name="Interactable" type="StaticBody3D" parent="Cockpit"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("6_fb5fw")
prompt_text = "Steer Ship"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cockpit/Interactable"]
shape = SubResource("BoxShape3D_fbly5")

[node name="MovementManager" type="Node3D" parent="." node_paths=PackedStringArray("ship_manager", "controllable", "camera_pivot")]
script = ExtResource("7_0mde5")
ship_manager = NodePath("..")
controllable = NodePath("../Cockpit/Controllable")
camera_pivot = NodePath("../CameraPivot")
acceleration = 30.0
max_speed = 50.0
mass = 200.0
turn_speed = 2.0
roll_speed = 2.0
rotation_accel = 3.0

[node name="VelocitySynchroniser" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_tds0y")

[node name="RadarSignature" parent="." instance=ExtResource("10_ddwes")]
transform = Transform3D(4.04892, 0, 0, 0, 4.04892, 0, 0, 0, 4.04892, 0, 0, 0)
visible = false
signature_name = "Fighter"
relation = 1

[node name="RadarMap" parent="." node_paths=PackedStringArray("radar_manager") instance=ExtResource("11_qanif")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.635, 1.419)
map_scale = 0.002
radar_manager = NodePath("../RadarManager")

[node name="RadarManager" type="Node3D" parent="." node_paths=PackedStringArray("self_sig")]
script = ExtResource("12_ji0mw")
self_sig = NodePath("../RadarSignature")

[node name="RadarTargeter" type="Node3D" parent="." node_paths=PackedStringArray("controllable", "radar_manager", "weapons_controller", "parent_ship")]
script = ExtResource("13_h86uo")
controllable = NodePath("../Cockpit/Controllable")
radar_manager = NodePath("../RadarManager")
weapons_controller = NodePath("../ShipWeaponsController")
parent_ship = NodePath("..")

[node name="PowerManager" type="Node3D" parent="." node_paths=PackedStringArray("reactor")]
script = ExtResource("15_82wde")
power_systems = Array[ExtResource("16_crtc6")]([SubResource("Resource_kl4ev"), SubResource("Resource_t7g4u"), SubResource("Resource_2t2p7"), SubResource("Resource_3x8m8"), SubResource("Resource_wd2yx"), SubResource("Resource_dirrh"), SubResource("Resource_fkvsh"), SubResource("Resource_ssukg")])
reactor = NodePath("../ShipReactorComponent")

[node name="Capacitor" parent="." node_paths=PackedStringArray("ship") instance=ExtResource("19_bsn7f")]
transform = Transform3D(1, 0, 0, 0, -0.554133, 0.832428, 0, -0.832428, -0.554133, 0.0125663, 0.728952, -1.58254)
ship = NodePath("..")

[node name="ShipReactorComponent" parent="." instance=ExtResource("19_4nti4")]
transform = Transform3D(0.0669459, 0, 0, 0, -2.9263e-09, 0.0669459, 0, -0.0669459, -2.9263e-09, 0.0330878, 1.21103, -3.82393)
